# toys

./: README.md
jobs/: Cargo.toml  README.md
jobs/client/: Cargo.toml
jobs/server/: Cargo.toml
jobs/server/src/: main.rs
struct_indexing/: Cargo.toml
struct_indexing/src/: main.rs
