[package]
name = "server"
version = "0.1.0"
authors = ["Alex Kornitzer <a.kornitzer@me.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bincode = "1.0"
chrono = { version = "0.4", features = ["serde"] }
nng = { version = "1.0.0-rc.2" }
quorum = { path = "/home/alex/Developer/quorum" }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["v4"] }
